welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: value update is not a member of String
		litMessage()=Message;
                ^BDRBuggle:6: error: not found: value Message
		if (Message==R) {
                    ^BDRBuggle:10: error: not found: value Message
		else if (Message==L) {
                         ^BDRBuggle:14: error: not found: value Message
		else if (Message==I) {
                         ^BDRBuggle:19: error: not found: value Message
		else if (Message==A) {
                         ^BDRBuggle:22: error: not found: value Message
		else if (Message==B) {
                         ^BDRBuggle:26: error: not found: value Message
		else if (Message==C) {
                         ^BDRBuggle:31: error: not found: value Message
		else if (Message==Z) {
                         ^BDRBuggle:34: error: not found: value Message
		else if (Message==Y) {
                         ^BDRBuggle:38: error: not found: value Message
		else if (Message==X) {
                         ^